--- a/404.html
+++ b/404.html
@@ -44,7 +44,7 @@
 						<div class="error__content">
 							<h1 class="error__title">404</h1>
 							<p class="error__text">The page you are looking for <br>not available!</p>
-							<a href="index-2.html" class="error__btn"><span>Go back</span></a>
+							<a href="/" class="error__btn"><span>Go back</span></a>
 						</div>
 					</div>
 				</div>
